err/siteglass.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/cssmin-0.2.0.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/siteglass'...
Compiling './lib/python3.5/site-packages/siteglass/config.py'...
***   File "./lib/python3.5/site-packages/siteglass/config.py", line 32
    raise KeyError, key
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/siteglass/copy.py'...
***   File "./lib/python3.5/site-packages/siteglass/copy.py", line 11
    print "%s -> %s" % (src,dst)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/siteglass/data'...
Compiling './lib/python3.5/site-packages/siteglass/images.py'...
***   File "./lib/python3.5/site-packages/siteglass/images.py", line 60
    raise RuntimeError, "Unsupported image type '%s'" % ext
                      ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/siteglass/mergemin.py'...
***   File "./lib/python3.5/site-packages/siteglass/mergemin.py", line 17
    print "%s -> %s" % (source, target)
                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/siteglass-0.2.egg-info'...
Listing './share'...
Listing './share/python-wheels'...
